--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,7 +7,7 @@
 //&display=swap - добавить при подключении через плагин
 
 // Подключить, если есть локальные файлы шрифтов
-//@import "fonts/fonts";
+@import "fonts/fonts";
 
 // Подключение иконочного шрифта ==============================================================================================================================================================================================================================================================================
 // Подключить, если есть файл иконочного шрифта
@@ -21,12 +21,14 @@
 // ============================================================================================================================================================================================================================================================================================================================================================================================
 
 // По умолчанию шрифт ==============================================================================================================================================================================================================================================================================
-$fontFamily: "";
-$fontSize: 16px; // де 14(px) - розмір шрифту за замовчуванням з макету
+$fontFamily: HattoriHanzo;
+$fontSize: 24px; // де 14(px) - розмір шрифту за замовчуванням з макету
 $borderRadius: 5px;
 // Основные цвета
-$mainColor: #000; // Колір шрифту за замовчуванням
-$accentColor: #05b3bd;
+$mainColor: #293a46; // Колір шрифту за замовчуванням
+$accentColor: #20b2ff;
+$accentColor-2: #20f0ff;
+$color-title: #1b2933;
 
 // Настройка адаптивной сетки ===============================================================================================================================================================================================================================================================================================
 
@@ -35,7 +37,7 @@ $minWidth: 375;
 // Ширина полотна (макета)
 $maxWidth: 1920;
 // Ширина ограничивающего контейнера (0 = Нет ограничения)
-$maxWidthContainer: 1170;
+$maxWidthContainer: 1640;
 // Общее отступление у контейнера
 // (30 = по 15px слева и справа, 0 = нет отступа)
 $containerPadding: 30;
@@ -154,6 +156,14 @@ body {
 @import "footer";
 @import "./components/breadcrumbs";
 @import "./components/hero";
+@import "./components/experts";
+@import "./components/price";
+@import "./components/sales";
+@import "./components/questions";
+@import "./components/services";
+@import "./components/feedback";
+@import "./components/stories";
+@import "./components/contacts";
 
 // Подключение стилей отдельных страниц
 @import "home";
