--- a/src/scss/base/forms/input.scss
+++ b/src/scss/base/forms/input.scss
@@ -4,31 +4,35 @@ input[type="text"],
 input[type="email"],
 input[type="tel"],
 textarea {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 }
 .input {
-  border-radius: 0 !important;
-  width: 100%;
-  display: block;
-  padding: 0px 20px;
-  border: 1px solid #eee;
-  &._form-focus {
-  }
-  &._form-error {
-  }
+	border-radius: 4px;
+	width: 100%;
+	display: block;
+	padding: 14px 16px;
+	border: 2px solid $accentColor;
+	font-size: 18px;
+	font-weight: 300;
+	outline: none;
+	&._form-focus {
+	}
+	&._form-error {
+	}
 }
 .input[placeholder]:not([data-placeholder-nohiden]) {
-  &::placeholder {
-    transition: opacity 0.3s;
-  }
-  &:focus::placeholder {
-    opacity: 0;
-  }
+	&::placeholder {
+		transition: opacity 0.3s;
+		color: #90a6b5;
+	}
+	&:focus::placeholder {
+		opacity: 0;
+	}
 }
 
 textarea.input {
-  resize: none;
-  padding: 0px 0px;
+	resize: none;
+	padding: 0px 0px;
 }
