--- a/src/scss/base/spollers.scss
+++ b/src/scss/base/spollers.scss
@@ -3,87 +3,51 @@
 
 // Блок зі спойлерами
 .spollers {
-  display: grid;
-  gap: 15px;
+	display: grid;
+	gap: 5px;
 }
 // Спойлер
 .spollers__item {
-  font-size: rem(20);
+	font-size: rem(20);
 }
 // Заголовок спойлера
 .spollers__title {
-  width: 100%;
-  cursor: default;
-  text-align: left;
-  border: 1px solid #eee;
-  padding: rem(10) rem(15);
-  border-radius: rem(5);
-  position: relative;
-  ._spoller-init & {
-    cursor: pointer;
-    &::before,
-    &::after {
-      content: "";
-      position: absolute;
-      right: 10px;
-      top: 50%;
-      background-color: #000;
-      height: 2px;
-      width: 15px;
-      transition: transform 0.5s ease 0s;
-    }
-    &::before {
-      transform: translate(-75%, -50%) rotate(40deg);
-    }
-    &::after {
-      transform: translate(0, -50%) rotate(-40deg);
-    }
-    &._spoller-active {
-      &::before {
-        transform: translateX(-75%) rotate(-40deg);
-      }
-      &::after {
-        transform: rotate(40deg);
-      }
-    }
-    /*
-		._spoller-init & {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	cursor: default;
+	text-align: left;
+	border-left: none;
+	border-top: none;
+	border-right: none;
+	border-bottom: 1px solid #eaf3fa;
+	padding: 22px 0px;
+	position: relative;
+	color: $color-title;
+	font-size: 38px;
+	font-style: normal;
+	font-weight: 300;
+	line-height: 160%;
+	._spoller-init & {
+		cursor: pointer;
+		.spollers__icon {
 			position: relative;
-			width: 100%;
-			text-align: left;
-			&::before,
-			&::after {
-				content: "";
-				position: absolute;
-				right: 0;
-				top: rem(12);
-				height: rem(1);
-				transition: all 0.3s ease 0s;
-				width: rem(10);
-				background-color: #000;
-			}
-			&::before {
-				transform: rotate(40deg);
-				right: rem(7);
-			}
-			&::after {
-				transform: rotate(-40deg);
-			}
+			flex: 0 0 42px;
+			width: 42px;
+			height: 42px;
+			transition: all 0.3s ease 0s;
 		}
 		&._spoller-active {
-			&::before {
-				transform: rotate(-40deg);
-			}
-			&::after {
-				transform: rotate(40deg);
+			border: none;
+			.spollers__icon {
+				color: $accentColor;
+				transform: rotate(90deg);
 			}
 		}
-		*/
-  }
+	}
 }
 // Контент спойлера
 .spollers__body {
-  padding: rem(20);
-  border-radius: rem(5);
-  border: 1px solid #eee;
+	border-bottom: 1px solid #eaf3fa;
 }
