--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,4 +1,203 @@
 // Заголовки, общие БЕМ блоки и прочее...
+.sections {
+	margin-top: 60px;
+	&__header {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		gap: 10px;
+		margin-bottom: 30px;
+		.btns {
+			display: flex;
+			gap: 32px;
+		}
+		.subtitle {
+		}
+	}
+}
+.title {
+	display: flex;
+	gap: 30px;
+	align-items: flex-end;
+	span {
+		color: $color-title;
+		font-family: BebasNeueCyrillic;
+		font-size: 52px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: normal;
+		text-transform: uppercase;
+	}
+	a {
+		color: $accentColor;
+		font-size: 24px;
+		font-style: normal;
+		font-weight: 300;
+		line-height: 140%;
+		letter-spacing: 0.72px;
+		transition: all 0.3s ease 0s;
+		@media (any-hover: hover) {
+			&:hover {
+				color: #20f0ff;
+			}
+		}
+	}
+}
+
+.icon {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.btn {
+	&-search {
+		width: 32px;
+		height: 32px;
+		padding: 0;
+		background-color: transparent;
+		border: none;
+		margin-left: 40px;
+	}
+
+	&-call {
+		margin-left: auto;
+		color: $color-title;
+		font-family: BebasNeueCyrillic;
+		font-size: 22px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: 115%;
+		letter-spacing: 0.88px;
+		padding: 10px 35px;
+		border: none;
+		background-color: #fff;
+		border-radius: 4px;
+	}
+
+	&-form {
+		width: 100%;
+		text-align: center;
+		padding: 10px 14px;
+		border-radius: 4px;
+		border: none;
+		font-family: BebasNeueCyrillic;
+		color: #fff;
+		font-size: 22px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: 115%;
+		letter-spacing: 0.88px;
+		position: relative;
+		z-index: 1;
+		background: $accentColor;
+		transition: background 0.5s ease;
+
+		@media (any-hover: hover) {
+			&:hover {
+				&::after {
+					opacity: 1;
+				}
+			}
+		}
+
+		&::after {
+			content: "";
+			position: absolute;
+			inset: 0;
+			background: linear-gradient(78deg, #20b2ff 29.33%, #57e6ff 89.16%);
+			opacity: 0;
+			transition: opacity 0.5s ease;
+			z-index: -1;
+			border-radius: inherit;
+		}
+
+		&.btn-white {
+			background-color: #fff;
+			color: $accentColor;
+
+			@media (any-hover: hover) {
+				&:hover {
+					&::after {
+						opacity: 1;
+					}
+				}
+			}
+
+			&::after {
+				content: "";
+				position: absolute;
+				inset: 0;
+				background: linear-gradient(87deg, #fff 37.39%, #b9f4ff 96.5%);
+				opacity: 0;
+				transition: opacity 0.5s ease;
+				z-index: -1;
+				border-radius: inherit;
+			}
+		}
+	}
+}
+.link {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+	font-size: 22px;
+	font-style: normal;
+	font-weight: 300;
+	line-height: normal;
+	letter-spacing: 0.66px;
+	color: $accentColor;
+	background-color: transparent;
+	border: none;
+	padding: 0;
+	&-services {
+		background: #eaf3fa;
+		padding: 20px 187px 20px 24px;
+		display: flex;
+		align-items: center;
+		gap: 16px;
+		color: $color-title;
+		font-family: BebasNeueCyrillic;
+		font-size: 26px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: normal;
+		.icon {
+			width: 25px;
+			height: 12px;
+		}
+	}
+
+	.icon {
+		width: 30px;
+		height: 30px;
+	}
+
+	&-accent {
+		color: #20b2ff;
+		font-size: 24px;
+		font-style: normal;
+		font-weight: 300;
+		line-height: 140%;
+		letter-spacing: 0.72px;
+		transition: all 0.3s ease 0s;
+		@media (any-hover: hover) {
+			&:hover {
+				color: #20f0ff;
+			}
+		}
+	}
+
+	&-white {
+		color: #fff;
+		font-size: 22px;
+		font-style: normal;
+		font-weight: 300;
+		line-height: 140%;
+		letter-spacing: 0.66px;
+		text-decoration: underline;
+	}
+}
+
 .lazy {
 	position: relative;
 	&::after {
@@ -70,19 +269,35 @@ svg {
 
 .swiper-button-next,
 .swiper-button-prev {
-	width: 40px;
-	height: 40px;
-	border-radius: 100%;
-	box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
-	position: absolute;
-	top: 50%;
-	background-color: #fff;
-	&::before {
-		color: $accentColor;
+	flex: 0 0 50px;
+	width: 50px;
+	height: 50px;
+	border: none;
+	padding: 11px;
+	border-radius: 4px;
+	position: relative;
+	z-index: 1;
+	background: $accentColor;
+	transition: background 0.5s ease;
+	color: #fff;
+
+	@media (any-hover: hover) {
+		&:hover {
+			&::after {
+				opacity: 1;
+			}
+		}
 	}
 
-	@media (max-width: $mobile) {
-		display: none;
+	&::after {
+		content: "";
+		position: absolute;
+		inset: 0;
+		background: linear-gradient(78deg, #20b2ff 29.33%, #57e6ff 89.16%);
+		opacity: 0;
+		transition: opacity 0.5s ease;
+		z-index: -1;
+		border-radius: inherit;
 	}
 
 	&.swiper-button-disabled {
@@ -92,42 +307,105 @@ svg {
 }
 
 .swiper-button-prev {
-	left: 20px;
-	transform: rotate(180deg) translateY(50%);
+	transform: rotate(180deg);
 }
 
 .swiper-button-next {
-	right: 20px;
-	transform: translateY(-50%);
 }
 
 .swiper-pagination {
 	position: absolute;
-	bottom: 20px;
+	bottom: 16px;
 	left: 0;
 	right: 0;
 	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	gap: 10px;
+	gap: 6px;
 
 	.swiper-pagination-bullet {
 		cursor: pointer;
 		width: 12px;
 		height: 12px;
 		border-radius: 100%;
-		background-color: #fff;
-		box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2) inset;
+		background: rgba(255, 255, 255, 0.5);
 		transition: all 0.3s ease 0s;
 
 		&.swiper-pagination-bullet-active {
 			background-color: #fff;
-			box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
 			width: 18px;
 			height: 18px;
 		}
 	}
+}
+
+.form-consent {
+	.custom-checkbox {
+		display: flex;
+		align-items: flex-start;
+		gap: 10px;
+		cursor: pointer;
+		user-select: none;
+	}
+
+	.custom-checkbox input[type="checkbox"] {
+		display: none;
+	}
+
+	.checkbox-box {
+		width: 20px;
+		height: 20px;
+		border: 2px solid $mainColor;
+		border-radius: 4px;
+		position: relative;
+		flex-shrink: 0;
+		transition:
+			border-color 0.3s,
+			background-color 0.3s;
+	}
+
+	.checkbox-box::after {
+		content: "";
+		position: absolute;
+		top: 2px;
+		left: 6px;
+		width: 5px;
+		height: 10px;
+		border: solid #fff;
+		border-width: 0 2px 2px 0;
+		transform: rotate(45deg);
+		opacity: 0;
+		transition: opacity 0.2s;
+	}
+
+	input[type="checkbox"]:checked + .checkbox-box {
+		background-color: $accentColor;
+		border-color: $accentColor;
+	}
+
+	input[type="checkbox"]:checked + .checkbox-box::after {
+		opacity: 1;
+	}
+
+	.checkbox-text {
+		font-size: 16px;
+		line-height: 110%;
+	}
+
+	.checkbox-text a {
+		color: $accentColor;
+		text-decoration: underline;
+
+		&:hover {
+		}
+	}
+}
+
+button[disabled] {
+	transition: all 0.3s ease 0s;
+	opacity: 0.6;
+	cursor: not-allowed;
 }
 
 // Animation ===========================
