--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,9 +1,107 @@
 //====================================================================================================
+.header {
+	&__top {
+		margin-bottom: 20px;
+	}
+	&__top-body {
+		display: flex;
+		align-items: center;
+	}
+	&__logo {
+		width: 488px;
+		flex-shrink: 0;
+		margin-right: 89px;
+	}
+	&__adress {
+		display: flex;
+		flex-direction: column;
+		gap: 3px;
+
+		li {
+			display: flex;
+			align-items: flex-end;
+			gap: 10px;
+			span {
+				font-size: 22px;
+				color: $mainColor;
+			}
+
+			a {
+				display: flex;
+				align-items: center;
+				white-space: nowrap;
+				gap: 13px;
+				color: $accentColor;
+				padding: 2px 14px;
+				border: 2px solid $accentColor;
+				border-radius: 4px;
+				font-size: 22px;
+				font-family: BebasNeueCyrillic;
+				line-height: 115%;
+				span {
+					color: $accentColor;
+				}
+
+				.icon {
+					width: 18px;
+					height: 24px;
+					color: $accentColor;
+				}
+			}
+		}
+	}
+	&__actions {
+		margin-left: auto;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
+	}
+	&__phone {
+		color: $mainColor;
+		font-family: BebasNeue;
+		font-size: 53px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: 110%;
+		text-transform: uppercase;
+	}
+	&__bottom {
+		background: #929394;
+	}
+	&__bottom-body {
+		display: flex;
+		align-items: center;
+	}
+	&__menu {
+		margin-left: 30px;
+	}
+}
+
+.menu {
+	&__body {
+	}
+	&__list {
+		display: flex;
+		gap: 55px;
+		align-items: center;
+
+		li {
+			a {
+				color: #fff;
+				font-family: BebasNeueCyrillic;
+				font-size: 26px;
+				font-style: normal;
+				font-weight: 400;
+				line-height: normal;
+			}
+		}
+	}
+}
 
 //====================================================================================================
 
 //Burger
-/*
+
 .icon-menu {
 	display: none;
 	@media (max-width: $mobile) {
@@ -39,9 +137,6 @@
 			span {
 				width: 0;
 			}
-			&::before,
-			&::after {
-			}
 			&::before {
 				top: calc(50% - rem(1));
 				transform: rotate(-45deg);
@@ -53,4 +148,3 @@
 		}
 	}
 }
-*/
