Закончил страницы услуг о компании специалистов сертификаты

--- a/src/scss/components/_breadcrumbs.scss
+++ b/src/scss/components/_breadcrumbs.scss
@@ -2,7 +2,7 @@
 	&__container {
 	}
 	&__wrapper {
-		padding: 0px 0px 80px 0px;
+		padding: 26px 0px 44px 0px;
 		white-space: nowrap;
 		overflow-x: auto;
 
@@ -13,7 +13,7 @@
 	&__list {
 		display: flex;
 		align-items: center;
-		gap: 28px;
+		gap: 47px;
 		list-style: none;
 
 		li {
@@ -21,28 +21,25 @@
 			&:not(:last-child) {
 				&::before {
 					content: "";
-					background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 12 12' fill='none'%3E%3Ccircle cx='6' cy='6' r='2' fill='white'/%3E%3C/svg%3E");
-					width: 12px;
-					height: 12px;
+					width: 23px;
+					height: 1px;
 					position: absolute;
-					top: 4px;
-					right: -18px;
-					color: #fff;
+					top: 50%;
+					right: -35px;
+					background-color: $mainColor;
 				}
 			}
 
 			a {
 				font-weight: 400;
-				font-size: 13px;
+				font-size: 18px;
 				line-height: 130%;
-				color: #fff;
 			}
 
 			span {
 				font-weight: 400;
-				font-size: 13px;
+				font-size: 18px;
 				line-height: 130%;
-				color: #fff;
 			}
 		}
 	}
