--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -164,6 +164,9 @@ body {
 @import "./components/feedback";
 @import "./components/stories";
 @import "./components/contacts";
+@import "./components/certificates";
+@import "./components/expert-card";
+@import "./components/expert-card-certificates";
 
 // Подключение стилей отдельных страниц
 @import "home";
