--- a/src/html/components/_breadcrumbs.htm
+++ b/src/html/components/_breadcrumbs.htm
@@ -6,7 +6,7 @@
                     <a href="#">Главная</a>
                 </li>
                 <li>
-                    <span>Преимущества</span>
+                    <span>@@title</span>
                 </li>
             </ul>
         </div>
