--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -135,6 +135,44 @@
 			}
 		}
 	}
+
+	&-line {
+		width: 100%;
+		text-align: center;
+		padding: 10px 14px;
+		border-radius: 4px;
+		border: 1px solid $accentColor;
+		font-family: BebasNeueCyrillic;
+		color: $accentColor;
+		font-size: 22px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: 115%;
+		letter-spacing: 0.88px;
+		position: relative;
+		z-index: 1;
+		background: #fff;
+		transition: background 0.5s ease;
+
+		@media (any-hover: hover) {
+			&:hover {
+				&::after {
+					opacity: 1;
+				}
+			}
+		}
+
+		&::after {
+			content: "";
+			position: absolute;
+			inset: 0;
+			background: linear-gradient(87deg, #fff 37.39%, #b9f4ff 96.5%);
+			opacity: 0;
+			transition: opacity 0.5s ease;
+			z-index: -1;
+			border-radius: inherit;
+		}
+	}
 }
 .link {
 	display: flex;
