--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,134 +1,17 @@
 .hero {
-	&__wrapper {
-		display: grid;
-		grid-template-columns: 320px 1fr;
-	}
-	&__body {
-		display: grid;
-		grid-template-columns: repeat(3, 1fr);
-	}
-}
-.hero-container {
-}
-.sidebar {
-	&__list {
-		padding: 16px 0px;
-		display: flex;
-		flex-direction: column;
-		border-right: 1px solid #eaf3fa;
-		border-bottom: 1px solid #eaf3fa;
-		border-left: 1px solid #eaf3fa;
-		position: relative;
-		> li {
-			padding: 6px 20px;
-			transition: all 0.3s ease 0s;
-			background-color: transparent;
-			@media (any-hover: hover) {
-				&:hover {
-					background-color: #eaf3fa;
-					> a {
-						color: $accentColor-2;
-					}
-
-					.sub-menu__overlay {
-						opacity: 1;
-						visibility: visible;
-					}
-				}
-			}
-			a {
-				display: flex;
-				align-items: center;
-				justify-content: space-between;
-				gap: 10px;
-				font-size: 22px;
-				transition: all 0.3s ease 0s;
-
-				.icon {
-					width: 18px;
-					height: 18px;
-				}
-			}
-		}
-
-		.sub-menu {
-			display: grid;
-			grid-template-columns: repeat(4, 1fr);
-			column-gap: 100px;
-			row-gap: 16px;
-
-			&__overlay {
-				z-index: 20;
-				position: absolute;
-				padding: 55px 120px;
-				top: 0;
-				left: 100%;
-				height: 100%;
-				width: calc(100vw - 600px);
-				background-color: #fff;
-				box-shadow: 5px 0px 23px -19px rgba(0, 0, 0, 0.6) inset;
-				opacity: 0;
-				visibility: hidden;
-				transition: all 0.3s ease 0s;
-			}
-
-			li {
-				height: 30px;
-				a {
-					transition: all 0.3s ease 0s;
-					@media (any-hover: hover) {
-						&:hover {
-							color: $accentColor-2;
-						}
-					}
-				}
-			}
-		}
-	}
-}
-
-.rating {
-	background: #eaf3fa;
-	padding: 30px 25px;
-	&__title {
-		font-family: BebasNeueCyrillic;
-		font-size: 48px;
-		font-style: normal;
-		font-weight: 400;
-		line-height: 130%;
-		text-transform: uppercase;
-		color: $color-title;
-	}
-	&__img {
-		width: 185px;
-	}
-	&__subtitle {
-		font-size: 22px;
-		font-style: normal;
-		font-weight: 300;
-		line-height: 140%;
-		letter-spacing: 0.48px;
-		margin-bottom: 30px;
-	}
-	&__list {
-		display: grid;
-		grid-template-columns: repeat(3, 1fr);
-		gap: 10px;
-	}
-	&__media {
-	}
-}
-
-.slider {
-	min-width: 0;
-	position: relative;
-}
-.hero {
 	&__slider {
 		height: 100%;
 	}
 	&__wrapper {
 		height: 100% !important;
+		display: grid;
+		grid-template-columns: 320px 1fr;
+		position: relative;
+	}
+
+	&__body {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
 	}
 	&__slide {
 		position: relative;
@@ -201,6 +84,131 @@
 			height: 100%;
 		}
 	}
+}
+.hero-container {
+}
+.sidebar {
+	&__list {
+		padding: 16px 0px;
+		display: flex;
+		flex-direction: column;
+		border: 1px solid #eaf3fa;
+
+		> li {
+			padding: 6px 20px;
+			transition: all 0.3s ease 0s;
+			background-color: transparent;
+			@media (any-hover: hover) {
+				&:hover {
+					background-color: #eaf3fa;
+					> a {
+						color: $accentColor-2;
+					}
+
+					.sub-menu__overlay {
+						opacity: 1;
+						visibility: visible;
+					}
+
+					.sub-menu {
+						opacity: 1;
+						visibility: visible;
+					}
+				}
+			}
+			a {
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+				gap: 10px;
+				font-size: 22px;
+				transition: all 0.3s ease 0s;
+
+				.icon {
+					width: 18px;
+					height: 18px;
+				}
+			}
+		}
+
+		.sub-menu {
+			display: grid;
+			grid-template-columns: repeat(4, 1fr);
+			column-gap: 100px;
+			row-gap: 16px;
+			opacity: 0;
+			visibility: hidden;
+			transition: all 0.5s ease 0s;
+
+			&__overlay {
+				z-index: 20;
+				position: absolute;
+				padding: 55px 120px;
+				top: 0;
+				left: 320px;
+				right: 0;
+				height: calc(100% + 1px);
+				width: auto;
+				background-color: #fff;
+				box-shadow: 5px 0px 23px -19px rgba(0, 0, 0, 0.6) inset;
+				opacity: 0;
+				visibility: hidden;
+
+				border-right: 1px solid #eaf3fa;
+				border-bottom: 1px solid #eaf3fa;
+				border-left: 1px solid #eaf3fa;
+			}
+
+			li {
+				height: 30px;
+				a {
+					transition: all 0.3s ease 0s;
+					@media (any-hover: hover) {
+						&:hover {
+							color: $accentColor-2;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+.rating {
+	background: #eaf3fa;
+	padding: 30px 25px;
+	&__title {
+		font-family: BebasNeueCyrillic;
+		font-size: 48px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: 130%;
+		text-transform: uppercase;
+		color: $color-title;
+	}
+	&__img {
+		width: 185px;
+	}
+	&__subtitle {
+		font-size: 22px;
+		font-style: normal;
+		font-weight: 300;
+		line-height: 140%;
+		letter-spacing: 0.48px;
+		margin-bottom: 30px;
+	}
+	&__list {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		gap: 10px;
+	}
+	&__media {
+	}
+}
+
+.slider {
+	min-width: 0;
+	position: relative;
 }
 
 .form {
